[package]
name = "rust_load_profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rand = "*"
regex = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                
    "fast-rng",         
    "macro-diagnostics"
]
